<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525">

    <TextView
        android:id="@+id/txtInput"
        android:layout_width="342dp"
        android:layout_height="116dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="#000000"
        android:ems="10"
        android:gravity="bottom|end"
        android:maxLength="12"
        android:textColor="#858585"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtOutput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="342dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="#000000"
        android:ems="10"
        android:gravity="top|end"
        android:maxLength="12"
        android:textColor="#858585"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInput" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="362dp"
        android:layout_height="241dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="digit"
                android:text="@string/_1"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button2"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="digit"
                android:text="@string/_2"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button3"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="digit"
                android:text="@string/_3"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/buttonAdd"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#526F81"
                android:onClick="operator"
                android:text="@string/add" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="digit"
                android:text="@string/_4"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button5"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="digit"
                android:text="@string/_5"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button6"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="digit"
                android:text="@string/_6"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/buttonSubtract"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#526F81"
                android:onClick="operator"
                android:text="@string/subtract" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="digit"
                android:text="@string/_7"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button8"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="digit"
                android:text="@string/_8"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button9"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="digit"
                android:text="@string/_9"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/buttonMultiply"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#526F81"
                android:onClick="operator"
                android:text="@string/multiply" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonClear"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#604949"
                android:onClick="clear"
                android:text="@string/clear" />

            <Button
                android:id="@+id/button0"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="digit"
                android:text="@string/_0"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/buttonEquals"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#737C69"
                android:onClick="equals"
                android:text="@string/equals" />

            <Button
                android:id="@+id/buttonDivide"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#526F81"
                android:onClick="operator"
                android:text="@string/divide" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/buttonBack"
                style="@android:style/Widget.Holo.Light.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/backspace"
                android:focusable="true"
                android:onClick="backspace"
                android:scaleType="centerInside"
                android:src="@drawable/backspace"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>